--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
       </div>
     </header>
-    <div class="messages">
+    <div class="messages" id='add-messages'>
         <label for="userInput">Message:</label><br>
         <input type="text" id="userInput" name="userInput">
         <button onclick="saveMsg();">Save</button>
@@ -30,39 +30,32 @@
       <!-- TODO: replace placeholder table with json data -->
       <table id='message-table'>
         <tr>
-          <th>Company</th>
+          <th>Message</th>
           <th>Contact</th>
-          <th>Country</th>
         </tr>
         <tr>
           <td>Alfreds Futterkiste</td>
           <td>Maria Anders</td>
-          <td>Germany</td>
         </tr>
         <tr>
           <td>Centro comercial Moctezuma</td>
           <td>Francisco Chang</td>
-          <td>Mexico</td>
         </tr>
         <tr>
           <td>Ernst Handel</td>
           <td>Roland Mendel</td>
-          <td>Austria</td>
         </tr>
         <tr>
           <td>Island Trading</td>
           <td>Helen Bennett</td>
-          <td>UK</td>
         </tr>
         <tr>
           <td>Laughing Bacchus Winecellars</td>
           <td>Yoshi Tannamuri</td>
-          <td>Canada</td>
         </tr>
         <tr>
           <td>Magazzini Alimentari Riuniti</td>
           <td>Giovanni Rovelli</td>
-          <td>Italy</td>
         </tr>
       </table>
     </div>
