bug fix for incorrect element selection

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       <title>Home Page</title>
       <link rel="stylesheet" href="index.css">
       <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
 
   </head>
   <body>
@@ -32,8 +32,8 @@
     <div class="messages" id="all-messages">
       <table id='message-table'>
         <tr>
-          <th>Message</th>
-          <th></th>
+          <th class="msg-cell">Message</th>
+          <th class="del-cell"></th>
         </tr>
       </table>
     </div>
