--- a/about.html
+++ b/about.html
@@ -1,10 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset='UTF-8'>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>About Page</title>
     <link rel="stylesheet" href="index.css">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
   </head>
   <body>
-
+    <header>
+      <div class='navbar'>
+        <a href="#" class="toggle" id="navHamburger">
+          <i class="fas fa-bars"></i>
+        </a>
+        <div class="right">
+          <a href="index.html" class="link">Home</a>
+          <a href="about.html" class="link">About</a>
+        </div>
+      </div>
+    </header>
   </body>
+  <script type="text/javascript" src="index.js"></script>
 </html>
