--- a/about.html
+++ b/about.html
@@ -21,5 +21,5 @@
       </div>
     </header>
   </body>
-  <script type="text/javascript" src="index.js"></script>
+  <script type="text/javascript" src="responsive.js"></script>
 </html>
