--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset='UTF-8'>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>About Page</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
   </head>
@@ -21,5 +21,5 @@
       </div>
     </header>
   </body>
-  <script type="text/javascript" src="responsive.js"></script>
+  <script type="text/javascript" src="js/responsive.js"></script>
 </html>
