--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset='UTF-8'>
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
       <title>Home Page</title>
-      <link rel="stylesheet" href="css/index.css">
+      <link rel="stylesheet" href="css/style.css">
       <link rel="stylesheet" href="css/homepage.css">
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
