--- a/about.html
+++ b/about.html
@@ -9,17 +9,20 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
   </head>
   <body>
-    <header>
-      <div class='navbar'>
-        <a href="#" class="toggle" id="navHamburger">
-          <i class="fas fa-bars"></i>
-        </a>
-        <div class="right">
-          <a href="index.html" class="link">Home</a>
-          <a href="about.html" class="link">About</a>
-        </div>
+    <nav>
+      <div class="title">
+        <h2>Barker</h2>
       </div>
-    </header>
+      <ul class="nav-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+        <div class="line3"></div>
+      </div>
+    </nav>
   </body>
-  <script type="text/javascript" src="js/responsive.js"></script>
+  <script type="text/javascript" src="js/app.js"></script>
 </html>
