write up for about page

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>About Page</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/aboutpage.css">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css">
   </head>
@@ -16,6 +17,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="#">Gallery</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
@@ -23,6 +25,13 @@
         <div class="line3"></div>
       </div>
     </nav>
+    <div class="content">
+        <image id="profile-pic" src="img/profile-pic.jpg"></image>
+      <div id="about-me">
+        <h1>About Me</h1>
+        <p>Hi! I'm Max. I am a good boy. When I'm not running around and making a rumpus, I like to write down my thoughts and musings here. I have lots and lots and lots of... SQUIRREL! No. False alarm. I know I just met you but I love you.</p>
+      </div>
+    </div>
   </body>
   <script type="text/javascript" src="js/app.js"></script>
 </html>
