--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
+        <li><a href="#">Gallery</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
